# Monopoly

./: .gitignore  CMakeLists.txt  Scenarios.txt
.github/workflows/: github-actions-demo.yml
MonopolyCPP/: CMakeLists.txt
MonopolyCPP/include/Monopoly/: Board.h  Game.h  GameStatus.h  Utils.h
MonopolyCPP/include/Monopoly/Groups/: ColoredGroup.h  Group.h  ServicesGroup.h  StationsGroup.h
MonopolyCPP/include/Monopoly/Interactions/: PlayerPropertyInteraction.h
MonopolyCPP/include/Monopoly/Logging/: Report.h
MonopolyCPP/include/Monopoly/Models/: PlayerTurnStatus.h  Results.h  TurnStatus.h
MonopolyCPP/include/Monopoly/Players/: Player.h  PlayerStamp.h
MonopolyCPP/include/Monopoly/Slots/: BuildableSlot.h  BuyableSlot.h  RentableSlot.h  Slot.h
MonopolyCPP/src/Monopoly/: Board.cpp  Game.cpp  GameStatus.cpp  MonopolyCPP.cpp  Utils.cpp
MonopolyCPP/src/Monopoly/Groups/: ColoredGroup.cpp  Group.cpp  ServicesGroup.cpp  StationsGroup.cpp
MonopolyCPP/src/Monopoly/Interactions/: PlayerPropertyInteraction.cpp
MonopolyCPP/src/Monopoly/Logging/: Report.cpp
MonopolyCPP/src/Monopoly/Players/: Player.cpp
MonopolyCPP/src/Monopoly/Slots/: BuildableSlot.cpp  BuyableSlot.cpp  RentableSlot.cpp  Slot.cpp
MonopolyTests/: .gitignore  CMakeLists.txt
MonopolyTests/include/MonopolyTests/: Framework.h  tests.h
MonopolyTests/include/MonopolyTests/SlotsUnitTests/: SlotTestsUtils.h  SlotUnitTests.h
MonopolyTests/src/MonopolyTests/: tests.cpp
MonopolyTests/src/MonopolyTests/SlotsUnitTests/: SlotUnitTests.cpp
